[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/object.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/InteractableObject.gd" type="Script" id=2]

[node name="InteractableObject" instance=ExtResource( 1 )]
input_pickable = true
collision_layer = 11
collision_mask = 0
script = ExtResource( 2 )

[connection signal="mouse_entered" from="." to="." method="_on_ClickableObject_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ClickableObject_mouse_exited"]
